# scribe-asr

./: .gitignore  README.md  apispec.md  pyproject.toml  test_client.py
src/asr/: __main__.py  config.py  engine.py  pipeline.py  server.py  text_fixer.py  turn_detector.py  vad.py  webrtc.py
